--- a/20210222/pom.xml
+++ b/20210222/pom.xml
@@ -12,6 +12,7 @@
         <module>springcloud-consul-80</module>
         <module>springcloud-consul-8001</module>
         <module>springcloud-consul-8003</module>
+        <module>cloud-gateway-gateway9527</module>
     </modules>
 
     <packaging>pom</packaging>
