--- a/20210222/pom.xml
+++ b/20210222/pom.xml
@@ -13,6 +13,10 @@
         <module>springcloud-consul-8001</module>
         <module>springcloud-consul-8003</module>
         <module>cloud-gateway-gateway9527</module>
+        <module>springcloud-zookeeper-80</module>
+        <module>springcloud-zookeeper-8001</module>
+        <module>springcloud-zookeeper-8002</module>
+        <module>springcloud-gateway-9525</module>
     </modules>
 
     <packaging>pom</packaging>
